knowledge/kubernetes+docker/yaml/httpbin/httpbin-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: httpbin-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "httpbin.example.com"
#  - port:    # 以安全端口进行访问
#        number: 443
#        name: https
#        protocol: HTTPS
#      tls:
#        mode: SIMPLE
#        serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
#        privateKey: /etc/istio/ingressgateway-certs/tls.key
#      hosts:
#      - "httpbin.example.com"
