knowledge/kubernetes+docker/yaml/httpbin/httpbin-virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:  #For NodePort ingress gateways, access by a browser is supported partially: only for the * hosts in the definition of the VirtualService.
  - "httpbin.example.com"
#  - "*"  # 如果想通过istio ingressgateway暴露的端口访问，可以取消该行注释
  gateways:
  - httpbin-gateway
  http:
  - match:
    - uri:
        prefix: /status
    - uri:
        prefix: /delay
    route:
    - destination:
        port:
          number: 8000
        host: httpbin
